attached_assets/Pasted-C-Users-cjake-AppData-Local-Android-Sdk-ndk-23-2-856831_1777415630944.txt
C:\Users\cjake\AppData\Local\Android\Sdk\ndk\23.2.8568313\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=aarch64-none-linux-android28 --gcc-toolchain=C:/Users/cjake/AppData/Local/Android/Sdk/ndk/23.2.8568313/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/cjake/AppData/Local/Android/Sdk/ndk/23.2.8568313/toolchains/llvm/prebuilt/windows-x86_64/sysroot -DFLOG_ANDROID_TAG="\"Predator RF\"" -DINSTALL_PREFIX=\"/usr\" -DSDRPP_IS_CORE -Dsdrpp_core_EXPORTS -I"C:/Users/cjake/TEMP/Predator RF/core/src" -I"C:/Users/cjake/TEMP/Predator RF/core/src/imgui" -I"C:/Users/cjake/TEMP/Predator RF/core/backends/android" -I"C:/Users/cjake/TEMP/Predator RF/core/backends/android/imgui" -I"C:/Users/cjake/TEMP/Predator RF/core/libcorrect/include" -I"C:/Users/cjake/TEMP/Predator RF/android/sdr-kit/arm64-v8a/include" -IC:/Users/cjake/AppData/Local/Android/Sdk/ndk/23.2.8568313/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -g -Og -std=c++17 -Wno-unused-command-line-argument -undefined dynamic_lookup -MD -MT core/CMakeFiles/sdrpp_core.dir/src/gui/main_window.cpp.o -MF core\CMakeFiles\sdrpp_core.dir\src\gui\main_window.cpp.o.d -o core/CMakeFiles/sdrpp_core.dir/src/gui/main_window.cpp.o -c "C:/Users/cjake/TEMP/Predator RF/core/src/gui/main_window.cpp"

C:/Users/cjake/TEMP/Predator RF/core/src/gui/main_window.cpp:2486:53: error: no matching function for call to object of type '(lambda at C:/Users/cjake/TEMP/Predator RF/core/src/gui/main_window.cpp:789:27)'
                            std::string evLabel   = readJsonString(events[e], "label",     evType);
                                                    ^~~~~~~~~~~~~~
C:/Users/cjake/TEMP/Predator RF/core/src/gui/main_window.cpp:789:27: note: candidate function not viable: no known conversion from 'std::string' (aka 'basic_string<char>') to 'const char *' for 3rd argument
    auto readJsonString = [](const json& row, const char* key, const char* fallback) {
                          ^
C:/Users/cjake/TEMP/Predator RF/core/src/gui/main_window.cpp:789:27: note: conversion candidate of type 'std::basic_string<char> (*)(const nlohmann::json &, const char *, const char *)' (aka 'std::basic_string<char> (*)(const basic_json<> &, const char *, const char *)')
Ask Gemini
